[gd_scene load_steps=4 format=3 uid="uid://3dt40m8sna42"]

[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="1"]
[ext_resource type="Script" uid="uid://dsu7ya3a8xop3" path="res://godot4/ui/settings_controls/SettingSlider.gd" id="3"]
[ext_resource type="AudioStream" uid="uid://bi38pkb44oyyx" path="res://assets/audio/UI_effects/switch-selection.wav" id="4"]

[node name="SettingSlider" type="Panel"]
custom_minimum_size = Vector2(0, 50)
offset_top = 175.0
offset_right = 448.0
offset_bottom = 220.0
theme = ExtResource("1")
script = ExtResource("3")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 5

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Volume" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
uppercase = true

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 5.0
value = 50.0
tick_count = 1
ticks_on_borders = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
bus = &"SFX"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="VBoxContainer/HSlider" to="." method="_on_h_slider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HSlider" to="." method="_on_h_slider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
